--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@capacitor/camera": "^5.0.2",
+    "@capacitor/filesystem": "^5.0.2",
+    "@capacitor/preferences": "^5.0.2",
+    "@ionic/pwa-elements": "^3.1.1",
     "@ionic/react": "^7.0.0",
     "@ionic/react-router": "^7.0.0",
     "@testing-library/jest-dom": "^5.11.9",
